style.css
/* http://meyerweb.com/eric/tools/css/reset/ 
   v2.0 | 20110126
   License: none (public domain)
*/
html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed,
figure, figcaption, footer, header, hgroup,
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
  margin: 0;
  padding: 0;
  border: 0;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
}

/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure,
footer, header, hgroup, menu, nav, section, main {
  display: block;
}

body {
  line-height: 1;
}

ol, ul {
  list-style: none;
}

blockquote, q {
  quotes: none;
}

blockquote:before, blockquote:after,
q:before, q:after {
  content: "";
  content: none;
}

table {
  border-collapse: collapse;
  border-spacing: 0;
}

/* -------------------------------- 

Colors

-------------------------------- */
/* -------------------------------- 

Fonts

-------------------------------- */
/* -------------------------------- 

Header

-------------------------------- */
header {
  background-color: transparent;
}
header h1, header h2 {
  text-align: right;
}

.cd-logo {
  /* logo box style */
  background-color: white;
  width: 120px;
}
@media only screen and (min-width: 1024px) {
  .cd-logo {
    width: 180px;
  }
}

.cd-download {
  /* download button top-right visible on big devices */
  background-color: white;
}
.no-touch .cd-download:hover {
  background-color: white;
}

/* -------------------------------- 

Body Styling

-------------------------------- */
body {
  /* this is the page background */
  background: url(assets/smoke-01.svg), url(assets/sherlock.svg);
  background-repeat: repeat-x, no-repeat;
  background-size: 60%, 30%;
  background-position: -5rem 5rem, 0 13rem;
  animation: animateSmoke 4s linear infinite;
}

@keyframes animateSmoke {
  from {
    background-position: -5rem 5rem, 0 13rem;
  }
  to {
    background-position: 300px -90px, 0 13rem;
  }
}
/* -------------------------------- 

Containers

-------------------------------- */
.cd-box {
  /* this is the container of various design elements - i.e. the 2 logo of the branding section */
  border: 1px solid #5F3916;
  border-radius: 3px;
  background: #C7B299;
  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.05);
  padding: 6px;
}

/* -------------------------------- 

xNavigation 

-------------------------------- */
.cd-main-nav, .cd-primary-nav {
  /* main navigation background color - full screen on small devices */
  background: white;
}
.cd-main-nav li:nth-child(1), .cd-primary-nav li:nth-child(1) {
  background-color: #412312;
}
.cd-main-nav li:nth-child(2), .cd-primary-nav li:nth-child(2) {
  background-color: #1f110b;
}
.cd-main-nav li:nth-child(3), .cd-primary-nav li:nth-child(3) {
  background-color: #89010F;
}
.cd-main-nav li:nth-child(4), .cd-primary-nav li:nth-child(4) {
  background-color: #5F3916;
}
.cd-main-nav li:nth-child(5), .cd-primary-nav li:nth-child(5) {
  background-color: #C7B299;
}
.cd-main-nav li:nth-child(6), .cd-primary-nav li:nth-child(6) {
  background-color: #1f110b;
}
.cd-main-nav li:nth-child(7), .cd-primary-nav li:nth-child(7) {
  background-color: #412312;
}
.cd-main-nav li:nth-child(8), .cd-primary-nav li:nth-child(8) {
  background-color: #5F3916;
}
.cd-main-nav li a, .cd-primary-nav li a {
  color: #C7B299;
  border-color: #1f110b;
}
@media only screen and (min-width: 1024px) {
  .cd-main-nav li a, .cd-primary-nav li a {
    color: #C7B299;
  }
  .cd-main-nav li a.selected, .cd-primary-nav li a.selected {
    color: #5F3916;
    box-shadow: 0 2px 0 #1f110b;
  }
}

/* -------------------------------- 

xPage title 

-------------------------------- */
main > h1 {
  color: #1f110b;
}
@media only screen and (min-width: 1600px) {
  main > h1 {
    /* title goes into the header on big devices */
    color: #1f110b;
  }
}

/* -------------------------------- 

xTypography 

-------------------------------- */
h1,
h2 {
  font-family: "Jim Nightshade", cursive;
  color: #89010F;
}

h1 {
  font-size: 2.4rem;
  font-weight: 300;
  line-height: 1.2;
  margin: 0 0 0.4em;
}
@media only screen and (min-width: 768px) {
  h1 {
    font-size: 3.2rem;
  }
}
@media only screen and (min-width: 1024px) {
  h1 {
    font-size: 4rem;
  }
}

h2 {
  font-weight: bold;
  text-transform: uppercase;
  margin: 1em 0;
}
@media only screen and (min-width: 768px) {
  h2 {
    font-size: 1.8rem;
    margin: 1em 0 1.4em;
  }
}

section > h2::before {
  /* number before each section title */
  color: #1f110b;
}

p {
  font-size: 1.4rem;
  line-height: 1.4;
  color: #1f110b;
}
p a {
  color: #1f110b;
  text-decoration: underline;
}
@media only screen and (min-width: 768px) {
  p {
    font-size: 1.6rem;
    line-height: 1.6;
  }
}

/* -------------------------------- 

xBasic style

-------------------------------- */
*, *::after, *::before {
  -webkit-box-sizing: border-box;
  -moz-box-sizing: border-box;
  box-sizing: border-box;
}

html * {
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

html {
  font-size: 62.5%;
}

body {
  font-size: 1.6rem;
  font-family: "Didact Gothic", sans-serif;
}

a {
  text-decoration: none;
}

img {
  max-width: 100%;
}

input, textarea, select {
  font-family: "Didact Gothic", sans-serif;
  font-size: 1.6rem;
}

header {
  height: 150px;
  width: 100%;
}
header nav {
  display: inline-block;
}
@media only screen and (min-width: 1024px) {
  header {
    height: 80px;
  }
  header::after {
    clear: both;
    content: "";
    display: block;
  }
}

.cd-logo {
  display: inline-block;
  height: 100%;
  position: relative;
}
/* ... */

